# SK-Creative-Challange-2016

./: GPIO_Labeled.odg  README.md  README.md~  SensorReader.py  SignDetector_piCam.py  camTest.py  plot.py
DeepLearning/: trainDataNamesSimple.py
DeepLearning/inference/: .inference.py.swp  inference.py  initVars.py
DeepLearning/nets/: checkpoint
PiFinder/: readme.txt  readme.txt~
ROS/image_publisher/: Readme.md  package.xml
ROS/sign_detection/: Readme.md
Raspi/: GPIO_Labeled.odg  MazeControl.py  MotorControl.py  MotorControl_bothPWM.py  MotorControl_working.py  SensorReader.py  SignDetector.py  SignDetector_demo.py  SignDetector_piCam.py  classification.py  main (copy).py  main.py
Raspi/sign_detection/: signs_new.odg  signs_new_small.odg
Raspi/sign_detection/scripts/: classification.py  detector.py
Raspi/sounds/: sound.py
image_publisher/: CMakeLists.txt  CMakeLists.txt~  Readme.md  Readme.md~  package.xml~
image_publisher/scripts/: image_Publisher.py
maze_control/: MazeControl.py  SensorReader (copy).py  SensorReader.py
maze_control/sign_detection/: CMakeLists.txt  package.xml
maze_control/sign_detection/scripts/: classification.py  detector.py
sign_detection/: Readme.md  package.xml~
sign_detection/scripts/: classification.py  detector.py  nms.py
utils/: camTest.py  plot.py
